--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "concurrently": "^5.2.0",
     "config": "^3.3.1",
     "express": "^4.17.1",
-    "mongoose": "^5.9.14"
+    "mongoose": "^5.9.14",
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
