--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Arhen Santiago",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "concurrently": "^5.2.0",
     "config": "^3.3.1",
     "express": "^4.17.1",
