--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "concurrently": "^5.2.0",
     "config": "^3.3.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.14",
     "uuid": "^8.0.0"
   },
