--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "config": "^3.3.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.26.0",
     "mongoose": "^5.9.14",
     "uuid": "^8.0.0"
   },
