--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.26.0",
-    "mongoose": "^5.9.14",
-    "uuid": "^8.0.0"
+    "mongoose": "^5.9.14"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
