--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
+    "moment": "^2.26.0",
+    "numeral": "^2.0.6",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
