--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "draft-js": "^0.11.6",
     "jquery": "^3.5.1",
     "moment": "^2.26.0",
     "numeral": "^2.0.6",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
