--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
-    "draft-js": "^0.11.6",
+    "html-react-parser": "^0.13.0",
     "jquery": "^3.5.1",
     "moment": "^2.26.0",
     "numeral": "^2.0.6",
